Closed
Bug 341951
Opened 19 years ago
Closed 19 years ago
Making a new folder in the bookmarks manager causes beep
Categories
(Camino Graveyard :: Bookmarks, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: froodian, Assigned: froodian)
Details
(Keywords: fixed1.8.1)
Attachments
(1 file)
1.27 KB,
patch
|
stuart.morgan+bugzilla
:
review+
mikepinkerton
:
superreview+
|
Details | Diff | Splinter Review |
STR:
1. Cmd-B
2. From the plus button, choose "Add folder"
What happens: New folder sheet comes up, and NSBeep
What should happen: no beep
Comment 1•19 years ago
|
||
The beep is from trying to show a second sheet while the first is visible. BWC's addBookmarkFolder: calls BookmarkViewController if the bookmark manager is visible, which in turn calls showDialogWithLocationsAndTitles:..., but then calls showDialogWithLocationsAndTitles: unconditionally after that.
If the showDialogWithLocationsAndTitles:... call is else-ified, the beep will go away.
Assignee | ||
Comment 2•19 years ago
|
||
And it works. :)
Comment 3•19 years ago
|
||
Comment on attachment 227865 [details] [diff] [review]
Does what smorgan said
r=me
Attachment #227865 -
Flags: review?(stuart.morgan) → review+
Updated•19 years ago
|
Attachment #227865 -
Flags: superreview?(mikepinkerton)
Comment 4•19 years ago
|
||
Comment on attachment 227865 [details] [diff] [review]
Does what smorgan said
sr=pink
Attachment #227865 -
Flags: superreview?(mikepinkerton) → superreview+
Assignee | ||
Updated•19 years ago
|
Whiteboard: [needs checkin]
Comment 5•19 years ago
|
||
Fixed trunk and branch.
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Whiteboard: [needs checkin]
Keywords: fixed1.8.1
You need to log in
before you can comment on or make changes to this bug.
Description
•