Fixing bug 341951, Making a new folder in the bookmarks manager causes beep, patch by froodiantherapy <stridey@gmail.com>. r=stuart.morgan, sr=pinkerton